# video_codec

./: README.md
intel/: README.md
intel/decode_sample/: CMakeLists.txt  decode.cpp  decode.hpp  main.cpp
